--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="container" id="header" style="text-align: center; margin: auto;">
         <div class="row" id="title-row" style="max-width: 100%; margin: 0 auto; display: inline-block">
             <h2 class="col-md-12 text-center" id="title">
-                <b>DäRF</b>: Boosting Radiance Fields from Sparse Input Views<br>with Monocular Depth Adaptation<br>
+                <b>SE-NeRF</b>: Self-Evolving Neural Radiance Fields<br>
                 <small>
                     Arxiv 2023
                 </small>
@@ -62,27 +62,23 @@
         <div class="row" id="author-row" style="margin:0 auto;">
             <div class="col-md-12 text-center" style="display: table; margin:0 auto">
                 <a style="text-decoration:none" href="https://uhnjiny.github.io/daaarf/">
-                    Jiuhn&nbsp;Song*
+                    Jaewoo&nbsp;Jung*
                 </a>
                 <span style="padding-left: 20px;"></span>
                 <a style="text-decoration:none" href="https://uhnjiny.github.io/daaarf/">
-                    Seonghoon&nbsp;Park*
+                    Jisang&nbsp;Han*
                 </a>
                 <span style="padding-left: 20px;"></span>
                 <a style="text-decoration:none" href="https://uhnjiny.github.io/daaarf/">
-                    Honggyu&nbsp;An*
+                    Jiwon&nbsp;Kang*
                 </a>
                 <br>
                 <a style="text-decoration:none" href="https://seokju-cho.github.io/">
-                    Seokju&nbsp;Cho
+                    Seongchan&nbsp;Kim
                 </a>
                 <span style="padding-left: 20px;"></span>
                 <a style="text-decoration:none" href="https://uhnjiny.github.io/daaarf/">
                     Min-Seop&nbsp;Kwak
-                </a>
-                <span style="padding-left: 20px;"></span>
-                <a style="text-decoration:none" href="https://uhnjiny.github.io/daaarf/">
-                    Sungjin&nbsp;Cho
                 </a>
                 <span style="padding-left: 20px;"></span>
                 <a style="text-decoration:none" href="https://cvlab.korea.ac.kr">
