--- a/index.html
+++ b/index.html
@@ -163,14 +163,14 @@
                     Qualitative Results
                 </h3>
                 <div class="text-justify">
-                    Qualitative results of on Synthetic Dataset with randomly selected <b>3 input views</b>.
+                    Qualitative results of on Synthetic Dataset trained with randomly selected <b>3 input views</b>.
                 </div>
                 <div class="text-center">
                     <img src="./img/Scannet_standard_qual.png" width="100%">
                 </div>
                 <br>
                 <div class="text-justify">
-                    Qualitative results of on LLFF Dataset with randomly selected <b>3 input views</b>.
+                    Qualitative results of on LLFF Dataset trained with randomly selected <b>3 input views</b>.
                 </div>
                 <div class="text-center">
                     <img src="./img/Scannet_extreme_qual.png" width="100%">
@@ -217,7 +217,8 @@
                     Motivation of Self-Supervised Training
                 </h3>
                 <div class="text-justify">
-                    To validate our framework, we show the resulting PSNR values of the rendered images from 360<span>&#x2218;</span> after being trained with 3 images from 0<span>&#x2218;</span>, 120<span>&#x2218;</span>, and 240<span>&#x2218;</span>. We observe that the quality of rendered images drops sharply despite a minor change in viewpoints due to extreme overfitting to sparse input views when using.
+                    To validate our framework, we show the resulting PSNR values of the rendered images from <span style="font-size: 70%;">360&deg;</span> after being trained with 3 images from <span style="font-size: 70%;">0&deg;</span>, <span style="font-size: 70%;">120&deg;</span>, and <span style="font-size: 70%;">240&deg;</span>. We observe that the quality of rendered images drops sharply despite a minor change in viewpoints due to extreme overfitting to sparse input views and show that this problem can be circumvented by applying the self-training framework to NeRF.
+                    <br>
                     <b>(a)</b>: monocular depth with image-level adjustment, 
                     <b>(b)</b>: monocular depth with patch-level adjustment, and 
                     <b>(c)</b>: rendered depth by NeRF trained with patch-level adjustment. 
