--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     Motivation of Self-Supervised Training
                 </h3>
                 <div class="text-justify">
-                    To validate our framework, we show the resulting PSNR values of the rendered images from <span>360&deg;</span> after being trained with 3 images from <span style="font-size: 70%;">0&deg;</span>, <span style="font-size: 70%;">120&deg;</span>, and <span style="font-size: 70%;">240&deg;</span>. We observe that the quality of rendered images drops sharply despite a minor change in viewpoints due to extreme overfitting to sparse input views and show that this problem can be circumvented by applying the self-training framework to NeRF.
+                    To validate our framework, we show the resulting PSNR values of the rendered images from <span>360&deg;</span> after being trained with 3 images from <span>0&deg;</span>, <span>120&deg;</span>, and <span>240&deg;</span>. We observe that the quality of rendered images drops sharply despite a minor change in viewpoints due to extreme overfitting to sparse input views and show that this problem can be circumvented by applying the self-training framework to NeRF.
                     <br>
                     <b>(a)</b>: monocular depth with image-level adjustment, 
                     <b>(b)</b>: monocular depth with patch-level adjustment, and 
