--- a/index.html
+++ b/index.html
@@ -160,6 +160,19 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
+                    Methodology
+                </h3>
+                <div class="text-justify">
+                    We distillize the knowledge of the teacher network to the student by applying seperate distillation schemes for reliable and unreliable rays.
+                <div class="text-center">
+                    <img src="./img/Distillation.png" width="100%">
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <h3>
                     Qualitative Results
                 </h3>
                 <div class="text-justify">
