--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     Methodology
                 </h3>
                 <div class="text-justify">
-                    We distillize the knowledge of the teacher network to the student by applying seperate distillation schemes for reliable and unreliable rays.
+                    We distillize the knowledge of the teacher network to the student by applying <b>seperate distillation schemes</b> for reliable and unreliable rays.
                 <div class="text-center">
                     <img src="./img/Distillation.png" width="100%">
                 </div>
