--- a/index.html
+++ b/index.html
@@ -179,14 +179,21 @@
                     Qualitative results of on Synthetic Dataset trained with randomly selected <b>3 input views</b>.
                 </div>
                 <div class="text-center">
-                    <img src="./img/Scannet_standard_qual.png" width="100%">
+                    <img src="./img/Qualitative_results_of_NeRF_Synthetic_with_3_input_view.png" width="100%">
                 </div>
                 <br>
                 <div class="text-justify">
-                    Qualitative results of on LLFF Dataset trained with randomly selected <b>3 input views</b>.
+                    Qualitative comparisons of on Synthetic Dataset trained with randomly selected <b>3 input views</b>.
                 </div>
                 <div class="text-center">
-                    <img src="./img/Scannet_extreme_qual.png" width="100%">
+                    <img src="./img/Comparions1.png" width="100%">
+                </div>
+                <br>
+                <div class="text-justify">
+                    Qualitative comparisons of on LLFF Dataset trained with randomly selected <b>3 input views</b>.
+                </div>
+                <div class="text-center">
+                    <img src="./img/Comparions2.png" width="100%">
                 </div>
             </div>
         </div>
@@ -329,7 +336,7 @@
         </div>
 
 
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h3>
                     Citation
@@ -347,7 +354,7 @@
                     </textarea>
                 </div>
             </div>
-        </div>
+        </div> -->
 <!--             
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
