--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     Qualitative comparisons of on LLFF Dataset trained with randomly selected <b>3 input views</b>.
                 </div>
                 <div class="text-center">
-                    <img src="./img/Comparions2.png" width="100%">
+                    <img src="./img/Comparison2.png" width="100%">
                 </div>
             </div>
         </div>
