Modify video comment

--- a/index.html
+++ b/index.html
@@ -192,8 +192,7 @@
                 </div>
                 <div class="text-center">
                     Our results on chair scene of NeRF Synthetic with 3 input views. We provide video comparison with
-                    our
-                    baseline, K-planes.
+                    our baseline(K-planes) and RegNeRF.
                     <br><br>
 
                 </div>
