feat: add results, motivation

--- a/index.html
+++ b/index.html
@@ -262,15 +262,18 @@
                         Qualitative Results
                     </h3>
                     <div class="text-justify">
-                        Qualitative results of on Synthetic Dataset trained with randomly selected <b>3 input views</b>.
+                        Qualitative results of on Synthetic Dataset trained with NeRF Synthetic Extreme(3-view).
                     </div>
                     <div class="text-center">
-                        <img src="./img/Qualitative_results_of_NeRF_Synthetic_with_3_input_view.png" width="100%">
+                        <img src="./img/Qualitative_results_of_NeRF_Synthetic_with_3_input_view_1.png" width="100%">
+                    </div>
+                    <br>
+                    <div class="text-center">
+                        <img src="./img/Qualitative_results_of_NeRF_Synthetic_with_3_input_view_2.png" width="100%">
                     </div>
                     <br>
                     <div class="text-justify">
-                        Qualitative comparisons of on Synthetic Dataset trained with randomly selected <b>3 input
-                            views</b>.
+                        Qualitative comparisons of on Synthetic Dataset trained with NeRF Synthetic Extreme(3-view).
                     </div>
                     <div class="text-center">
                         <img src="./img/Comparions1.png" width="100%">
@@ -290,15 +293,12 @@
                     <h3>
                         Quantitative Results
                     </h3>
-                    <div class="text-justify">
-                        The best-performing results are presented in <b>bold</b>.
-                    </div>
                     <div class="text-center">
-                        <img src="./img/main_qual_nerf.png" width="100%">
+                        <img src="./img/quan_perdataset.png" width="100%">
                     </div>
                     <br>
                     <div class="text-center">
-                        <img src="./img/main_qual_depth.png" width="100%">
+                        <img src="./img/quan_synthetic_perscene.png" width="80%">
                     </div>
                 </div>
             </div>
@@ -340,7 +340,7 @@
                         ground-truth information.
                     </div>
                     <div class="text-center">
-                        <img src="./img/motivation_local.png" width="80%">
+                        <img src="./img/motivation.png" width="100%">
                     </div>
                     <!-- <div class="text-center">
                     <video id="refdir" width="40%" playsinline autoplay loop muted>
