--- a/index.html
+++ b/index.html
@@ -169,27 +169,8 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <div>
-                        <video class="video" id="kplanes" width="50%" loop playsinline autoPlay muted
-                            src="./img/kplanes_subtitle.mp4" onplay="resizeAndPlay(this)"></video>
-                        <!-- <canvas width="150" height="150" class="videoMerge" id="TeaserMerge"></canvas> -->
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div>
-                        <video class="video" id="regnerf" width="50%" loop playsinline autoPlay muted
-                            src="./img/RegNeRF_subtitle.mp4" onplay="resizeAndPlay(this)"></video>
-                        <!-- <canvas width="150" height="150" class="videoMerge" id="0758Merge"></canvas> -->
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div>
-                        <video class="video" id="ours" width="50%" loop playsinline autoPlay muted
-                            src="./img/Ours_subtitle.mp4" onplay="resizeAndPlay(this)"></video>
-                        <!-- <canvas width="150" height="150" class="videoMerge" id="0781Merge"></canvas> -->
-                    </div>
-                </div>
+                <video class="video" id="kplanes" width="50%" loop playsinline autoPlay muted
+                    src="./img/kplanes_regnerf_ours.mp4" onplay="resizeAndPlay(this)"></video>
                 <div class="text-center">
                     Our results on chair scene of NeRF Synthetic with 3 input views. We provide video comparison with
                     our baseline(K-planes) and RegNeRF.
