--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
         </div>
         <div class="container">
             <div class="row">
-                <video class="video" id="kplanes" width="50%" loop playsinline autoPlay muted
-                    src="./img/kplanes_regnerf_ours.mp4" onplay="resizeAndPlay(this)"></video>
+                <video class="video" id="kplanes" width="50%" loop playsinline muted controls
+                    src="./img/kplanes_regnerf_ours.mp4"></video>
                 <div class="text-center">
                     Our results of chair scene on NeRF Synthetic Extereme(3-view). We provide video comparison with
                     our baseline(K-planes) and RegNeRF.
@@ -486,13 +486,13 @@
                 </h3>
                 <div class="form-group col-md-10">
                     <textarea id="bibtex" class="form-control" readonly>
-@misc{song2023darf,
-    title={DäRF: Boosting Radiance Fields from Sparse Inputs with Monocular Depth Adaptation}, 
-    author={Jiuhn Song and Seonghoon Park and Honggyu An and Seokju Cho and Min-Seop Kwak and Sungjin Cho and Seungryong Kim},
-    year={2023},
-    eprint={2305.19201},
-    archivePrefix={arXiv},
-    primaryClass={cs.CV}
+@misc{jung2023selfevolving,
+title={Self-Evolving Neural Radiance Fields},
+author={Jaewoo Jung and Jisang Han and Jiwon Kang and Seongchan Kim and Min-Seop Kwak and Seungryong Kim},
+year={2023},
+eprint={2312.01003},
+archivePrefix={arXiv},
+primaryClass={cs.CV}
 }
                     </textarea>
                 </div>
