--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class="col-sm-6 col-sm-offset-3 text-center">
                 <ul class="nav nav-pills nav-justified">
                     <li>
-                        <a href="https://arxiv.org/abs/2312.01003">
+                        <a href="">
                             <img src="./img/paper_image.png" height="60px">
                             <h4><strong>Paper</strong></h4>
                         </a>
@@ -168,7 +168,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <video class="video" id="kplanes" width="50%" loop playsinline muted controls
+                <video class="video" id="kplanes" width="50%" poster="./img/preview.png" loop playsinline muted controls
                     src="./img/kplanes_regnerf_ours.mp4"></video>
                 <div class="text-center">
                     Our results of chair scene on NeRF Synthetic Extereme(3-view). We provide video comparison with
