fix : remove control bar in main video

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <video class="video" id="kplanes" width="50%" poster="./img/preview.png" loop playsinline muted controls autoplay>
+                <video class="video" id="kplanes" width="50%" poster="./img/preview.png" loop playsinline muted autoplay>
                     <!-- src="./img/kplanes_regnerf_ours.mp4"> -->
                     <source src="./img/kplanes_regnerf_ours.webm" type="video/webm">
                     <source src="./img/kplanes_regnerf_ours.mp4" type="video/mp4">
