--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <div class="row" id="author-row" style="margin:0 auto;">
             <div class="col-md-12 text-center" style="display: table; margin:0 auto">
-                <a style="text-decoration:none" href="https://github.com/crepejung00">
+                <a style="text-decoration:none" href="https://crepejung00.github.io/">
                     Jaewoo&nbsp;Jung*
                 </a>
                 <span style="padding-left: 20px;"></span>
